@startuml
AddSongToPlaylistActivity *-- Logger
AddSongToPlaylistActivity *-- PlaylistDao
AddSongToPlaylistActivity *-- AlbumTrackDao
class AddSongToPlaylistActivity implements RequestHandler {
    - Logger log
    - PlaylistDao playlistDao
    - AlbumTrackDao albumTrackDao
    + handleRequest(AddSongToPlaylistRequest, Context) : AddSongToPlaylistResult
}

class CreatePlaylistActivity implements RequestHandler {
    - Logger log
    - PlaylistDao playlistDao
    + handleRequest(CreatePlaylistRequest, Context) : CreatePlaylistResult
}
CreatePlaylistActivity *-- Logger
CreatePlaylistActivity *-- PlaylistDao

newpage

class GetPlaylistActivity implements RequestHandler {
    - Logger log
    - PlaylistDao playlistDao
    + handleRequest(GetPlaylistRequest, Context) : GetPlaylistResult
}
GetPlaylistActivity *-- Logger
GetPlaylistActivity *-- PlaylistDao

class GetPlaylistSongsActivity implements RequestHandler {
    - Logger log
    - PlaylistDao playlistDao
    + handleRequest(GetPlaylistSongsRequest, Context) : GetPlaylistSongsResult
}
GetPlaylistSongsActivity *-- Logger
GetPlaylistSongsActivity *-- PlaylistDao

class UpdatePlaylistActivity implements RequestHandler {
    - Logger log
    - PlaylistDao playlistDao
    + handleRequest(UpdatePlaylistRequest, Context) : UpdatePlaylistResult
}
UpdatePlaylistActivity *-- Logger
UpdatePlaylistActivity *-- PlaylistDao


newpage

class AlbumTrack {
    @DynamoDBHashKey asin : String
    @DynamoDBRangeKey trackNumber : Integer
    albumName : String
    songTitle : String
}

class Playlist {
    @DynamoDBHashKey id : String
    name : String
    customerId : String
    songCount : Integer
    tags : Set<String>
    songList : List<AlbumTrack>
}
Playlist *-- AlbumTrack
AlbumTrackNotFoundException --|> RuntimeException


class AlbumTrackDao {
    dynamoDbMapper : DynamoDBMapper
}

class PlaylistDao {
    dynamoDbMapper : DynamoDBMapper
    + getPlaylist(id : String) : Playlist
}

newpage
'RuntimeException <|-- InvalidAttributeException
class InvalidAttributeException extends RuntimeException {
    {static} - long serialVersionUID
}

class AlbumTrackNotFoundException extends RuntimeException {
    {static} - long serialVersionUID
}

class InvalidAttributeValueException {
    {static} - long serialVersionUID
}
InvalidAttributeException <|-- InvalidAttributeValueException

class PlaylistNotFoundException extends RuntimeException {
    {static} - long serialVersionUID
}

class InvalidAttributeChangeException {
    {static} - long serialVersionUID
}
InvalidAttributeException <|-- InvalidAttributeChangeException

@enduml